syntax = "proto3";
option java_package = "com.leader.game.protobuf.protocol";
option java_outer_classname = "ServerInternalProtocol";

//服务器注册消息请求
message ReqRegisterServerMessage{
	int32 serverId = 1; //服务器编号
	string name = 2;//名字
	string ip = 3;//外网ip地址
	int32 port = 4;//端口号
}

//网关服注册响应消息
message ResRegisterServerMessage{
	int32 code = 1; //响应码
	string serverName = 2; //服务器名字
}


//网关服注册心跳消息
message ReqInternalHeartbeatMessage{
	int32 online = 1; //在线人数
}

// 验证玩家登录令牌请求
message ReqVerifyLoginTokenMessage{
		string token = 1;
		int32 serverId = 2;
}

// 验证玩家登录令牌响应
message ResVerifyLoginTokenMessage{
		int32 code = 1;
		User user = 2;
}

// 玩家帐号
message User{
		string username = 1;
}

// 注册帐号请求
message ReqRegisterint32Message{
		string username = 1;
		string password = 2;
}

// 更新玩家角色请求
message ReqUpdatePlayerMessage{
		string username = 1;
		int32 serverId = 2;
		int64 uid = 3;
		string nickname = 4;
		int32 level = 5;
		int32 sex = 6;
}